# ds2010-final-proj

./: .gitignore  README.md  online_shoppers_intention_short.csv  output1.txt  proposal.md  pyproject.toml  shop-data.py
